# font_maker

./: CMakeLists.txt  README.md  build.bat  cmd.lnk  debug.bat  run.bat
.github/workflows/: build-deploy.yml  build-ubuntu.yml  build-windows.yml
debug/: font_maker.sln
debug/test/: font_main.txt
src/: data_parser.h  defines.h  error_codes.h  files.cpp  files.h  font_info.h  image.h  main.cpp  memory_arena.h  platform.h  platform_unix.cpp  platform_windows.cpp  strings.h  utility.h
